Fri May 30 15:51:43 2003  Owen Taylor  <otaylor@redhat.com>

	* glib/giochannel.c (g_io_error_get_from_g_error): 
	Do a g_return_val_if_fail() on err == NULL to be a
	bit more robuts on buggy IO channel implementations.
	(#113396, Dan Winship)

Tue May 27 19:56:35 2003  Owen Taylor  <otaylor@redhat.com>

	* glib/gmacros.h: __PRETTY_FUNCTION__ was made a non-token
	before gcc-3.0.0 for C++. (Fix from Martin Kretzschmar,
	#113797)

2003-05-28  Matthias Clasen  <maclas@gmx.de>

	* tests/patterntest.c: Remain silent when sucessful. 

	* tests/Makefile.am: Add patterntest to make check.  (113143)

2003-05-27  Matthias Clasen  <maclas@gmx.de>

	* glib/gstrfuncs.c (g_strdup): Use memcpy instead of
	strcpy. (#106988, Christian Biere)

2003-05-27  Matthias Clasen  <maclas@gmx.de>

	* glib/gstrfuncs.c (g_strdup): Use memcpy instead of
	strcpy. (#106988, Christian Biere)

2003-05-23  Noah Levitt  <nlevitt@columbia.edu>

	* glib/gutf8.c: Fix typo in UNICODE_VALID (related to #107427).

2003-05-23  Noah Levitt  <nlevitt@columbia.edu>

	* glib/guniprop.c: Remove stale comment.

2003-05-22  Noah Levitt  <nlevitt@columbia.edu>

	* glib/guniprop.c: Update g_unichar_iswide to Unicode 4.0 (#113404).

2003-05-21  Noah Levitt  <nlevitt@columbia.edu>

	* glib/guniprop.c: Fix obscure typo in case conversion routine
	(#113469).

Tue May 20 14:14:55 2003  Manish Singh  <yosh@gimp.org>

	* configure.in: wrap 64-bit MIN/MAX limit constants in
	G_GINT64_CONSTANT. Fixes bug #108699.

2003-05-19  Noah Levitt  <nlevitt@columbia.edu>

	* glib/gunibreak.c: Fix cut-and-pasto: g_unichar_break_type should
	return G_UNICODE_BREAK_UNKNOWN if the character is greater than
	G_UNICODE_LAST_CHAR.

2003-05-19  Noah Levitt  <nlevitt@columbia.edu>

	* glib/glist.c: Remove unused function g_list_sort2 (bug #113203).

2003-05-19  Noah Levitt  <nlevitt@columbia.edu>

	* glib/gunidecomp.c: Fix off-by-one error in
	g_unicode_canonical_ordering (bug #113260).

2003-05-19 Arafat Medini <lumina@silverpen.de>
